force-app/main/default/objects/Schedule__c/fields/Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Date__c</fullName>
    <description>The beginning date for the Schedule inclusive.</description>
    <label>Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>