force-app/main/default/objects/Schedule__c/fields/Booked_Total__c.field-meta.xml
<CustomField>
    <fullName>Booked_Total__c</fullName>
    <description>The total number of booked Appointment Slots for this Schedule</description>
    <label>Booked Total</label>
    <summarizedField>Appointment__c.Booked__c</summarizedField>
    <summaryForeignKey>Appointment__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>