force-app/main/default/objects/Schedule__c/fields/Capacity_Total__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Total__c</fullName>
    <description>The total number of booked Appointment slots.</description>
    <label>Capacity Total</label>
    <summarizedField>Appointment__c.Capacity__c</summarizedField>
    <summaryForeignKey>Appointment__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>