force-app/main/default/objects/Schedule__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <description>The Center associated with this Schedule</description>
    <label>Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>