force-app/main/default/objects/Schedule__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last day for this Schedule inclusive.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>