force-app/main/default/objects/Schedule__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <description>The utilization rate for booked / capacity for this Schedule</description>
    <formula>Booked_Total__c / Capacity_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>