force-app/main/default/objects/Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Center__c</columns>
    <columns>Begin_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Duration_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>